@@ -1,6 +1,9 @@
 3.0.0-beta2 (2013-06-??)
 	* Fixed: Corrected includes.php file.
 	* Fixed: vCard date-time parser supported extended-format dates as well.
+	* Changed: Properties have been moved to an ICalendar or VCard directory.
+	* Fixed: Couldn't parse vCard 3 extended format dates and times.
+	* Fixed: Couldn't export jCard DATE values correctly.
 
 3.0.0-beta1 (2013-06-07)
 	* Added: jsonSerialize() for creating jCal and jCard documents.
